crates/hir-ty/tests/snapshots/jls_variable_annotations__enhanced_for_variable.snap
---
source: crates/hir-ty/tests/jls_variable_annotations.rs
expression: out
---
FILE /src/com/example/Anns.java:
package com.example;

import java.lang.annotation.ElementType;
import java.lang.annotation.Target;

@Target(ElementType.TYPE_USE) @interface TYPE_USE {}
@Target(ElementType.LOCAL_VARIABLE) @interface LOCAL_VARIABLE {}
@Target(ElementType.PARAMETER) @interface PARAMETER {}
@Target(ElementType.FIELD) @interface FIELD {}
@Target(ElementType.METHOD) @interface METHOD {}

class Anns {
void loops() {
        for (@LOCAL_VARIABLE int ok : new int[0]) {
        }
        for (@TYPE_USE int typeUse : new int[0]) {
        }
        for (@METHOD int method : new int[0]) {
        }
        for (@TYPE_USE var annotated : new int[0]) {
        }
        for (@TYPE_USE var initial = 0; initial < 1; initial++) {
        }
    }
}

@17:14: annotation-not-applicable: '@METHOD' not applicable to local variable
@19:14: annotated-var: 'var' type may not be annotated
@21:14: annotated-var: 'var' type may not be annotated
