crates/hir-ty/tests/snapshots/jls_variable_annotations__lambda_parameter.snap
---
source: crates/hir-ty/tests/jls_variable_annotations.rs
expression: out
---
FILE /src/com/example/Anns.java:
package com.example;

import java.lang.annotation.ElementType;
import java.lang.annotation.Target;

@Target(ElementType.TYPE_USE) @interface TYPE_USE {}
@Target(ElementType.LOCAL_VARIABLE) @interface LOCAL_VARIABLE {}
@Target(ElementType.PARAMETER) @interface PARAMETER {}
@Target(ElementType.FIELD) @interface FIELD {}
@Target(ElementType.METHOD) @interface METHOD {}

class Anns {
interface IntFunction {
        void apply(int value);
    }

    void lambdas() {
        IntFunction ok = (@PARAMETER int value) -> {};
        IntFunction typeUse = (@TYPE_USE int value) -> {};
        IntFunction field = (@FIELD int value) -> {};
        IntFunction annotatedVar = (@TYPE_USE var value) -> {};
        IntFunction parameterVar = (@PARAMETER var value) -> {};
        IntFunction concise = (value) -> {};
    }
}

@19:30: annotation-not-applicable: '@FIELD' not applicable to parameter
@20:37: annotated-var: 'var' type may not be annotated
