crates/hir-ty/tests/snapshots/jls_variable_annotations__multi_declarator_declaration.snap
---
source: crates/hir-ty/tests/jls_variable_annotations.rs
expression: out
---
FILE /src/com/example/Anns.java:
package com.example;

import java.lang.annotation.ElementType;
import java.lang.annotation.Target;

@Target(ElementType.TYPE_USE) @interface TYPE_USE {}
@Target(ElementType.LOCAL_VARIABLE) @interface LOCAL_VARIABLE {}
@Target(ElementType.PARAMETER) @interface PARAMETER {}
@Target(ElementType.FIELD) @interface FIELD {}
@Target(ElementType.METHOD) @interface METHOD {}

class Anns {
void locals() {
        @FIELD int first = 0, second = 0;
        java.util.List<@FIELD String> a = null, b = null;
    }
}

@13:9: annotation-not-applicable: '@FIELD' not applicable to local variable
@14:24: annotation-not-applicable-in-type-context: '@FIELD' not applicable to type use
