crates/hir-ty/tests/snapshots/jls_variable_annotations__unknown_annotation_on_a_parameter.snap
---
source: crates/hir-ty/tests/jls_variable_annotations.rs
expression: out
---
FILE /src/com/example/Anns.java:
package com.example;

import java.lang.annotation.ElementType;
import java.lang.annotation.Target;

@Target(ElementType.TYPE_USE) @interface TYPE_USE {}
@Target(ElementType.LOCAL_VARIABLE) @interface LOCAL_VARIABLE {}
@Target(ElementType.PARAMETER) @interface PARAMETER {}
@Target(ElementType.FIELD) @interface FIELD {}
@Target(ElementType.METHOD) @interface METHOD {}

class Anns {
void method(@Missing int unknown, @FIELD int known) {
    }
}

@12:13: cannot-resolve-type: Cannot resolve symbol 'Missing'
@12:35: annotation-not-applicable: '@FIELD' not applicable to parameter
